Fix JAXWSBuilderTestCase
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/trunk/jbossws-core@3197 50344849-fb0f-0410-a53f-a94597aac05c